# rust-learning-demo-app

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  migrate.sh
migrations/: 20211120145003_create_users_table.down.sql  20211120145003_create_users_table.up.sql  20211121171231_create_roles_table.up.sql
src/: config.rs  main.rs  utils.rs
src/db/: context.rs  mod.rs
src/db/dao/: mod.rs  role.rs  user.rs
src/db/entities/: mod.rs  role.rs  user.rs
src/dto/: mod.rs  user.rs
src/handlers/: mod.rs  roles.rs  users.rs
src/handlers/models/: mod.rs  user.rs
