[package]
name = "identity_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
bcrypt = "0.10"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
sqlx = { version = "0.5.9", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }